--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>[请输入页面标题]</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <link rel="stylesheet" href="src/common/css/main.css" />
+    <link rel="stylesheet" href="src/common/css/main.less" />
     <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/1-8-2/esl.js"></script> 
 </head>
 
