支持显示附件的列表，从而可以下载附件
发送邮件的功能 sent_mail 还是无法调试通过，初步估计
跟 AUTH LOGIN 的用法有关系，需要自己实现一个Class来处理
这部分的功能，默认的PlainAuth是不行的

--- a/src/client/src/mail/view.tpl.html
+++ b/src/client/src/mail/view.tpl.html
@@ -49,6 +49,16 @@
                   <th>源文件：</th>
                   <td><a href="http://127.0.0.1:8765/raw/${uidl}.txt" target="_blank">查看</a></td>
                 </tr>
+                <!-- if: ${email.attachments.length} -->
+                <tr>
+                  <th>附件：</th>
+                  <td>
+                      <!-- for: ${email.attachments} as ${item}, ${index} -->
+                      <a href="http://127.0.0.1:8765/downloads/${uidl}/${item}" target="_blank">${item}</a>&nbsp;&nbsp;
+                      <!-- /for -->
+                  </td>
+                </tr>
+                <!-- /if -->
             </table>
         </div>
     </div>
