调整 /mail/inbox 的样式，main.go 支持定时收取邮件
实现的功能类似setInterval

--- a/src/client/src/mail/compose.tpl.html
+++ b/src/client/src/mail/compose.tpl.html
@@ -23,7 +23,7 @@
                            data-ui-required="required"
                            data-ui-width="500"
                            name="to"
-                           data-ui-value="" />
+                           data-ui-value="${to}" />
                 </div>
             </div>
             <div class="form-row">
