--- a/src/client/src/mail/inbox.tpl.html
+++ b/src/client/src/mail/inbox.tpl.html
@@ -1,13 +1,20 @@
 <!-- target: TPL_mail_inbox -->
 <div class="mail-inbox">
     <div class="list-header">
-        <!-- <form data-ui-type="Form" data-ui-id="filter" class="list-filter">
-            <div data-ui-type="Button" data-ui-id="search"
-                data-ui-extension-submit-type="AutoSubmit">搜索</div>
-        </form> -->
         <div class="list-batch">
             <div data-ui-type="Button" data-ui-id="create" data-ui-skin="spring-add">新建</div>
+            <div data-ui-type="Button" data-ui-id="refresh">刷新</div>
         </div>
+        <form data-ui-type="Form" data-ui-id="filter" class="list-filter">
+            <input data-ui-id="keyword"
+                   data-ui-type="TextBox"
+                   data-ui-required="required"
+                   data-ui-width="300"
+                   placeholder="请输入关键词"
+                   name="keyword" />
+            <!-- <div data-ui-type="Button" data-ui-id="search"
+                data-ui-extension-submit-type="AutoSubmit">搜索</div> -->
+        </form>
     </div>
     <!-- import: listTableWithCommand -->
     <!-- import: listPager -->
