--- a/src/client/src/mail/inbox.tpl.html
+++ b/src/client/src/mail/inbox.tpl.html
@@ -4,6 +4,9 @@
         <div class="list-batch">
             <div data-ui-type="Button" data-ui-id="create" data-ui-skin="spring-add">新建</div>
             <div data-ui-type="Button" data-ui-id="refresh">刷新</div>
+            <!-- &nbsp;|&nbsp; -->
+            <div data-ui-type="Button" data-ui-id="archive" data-ui-disabled="true">归档</div>
+            <div data-ui-type="Button" data-ui-id="delete" data-ui-disabled="true">删除</div>
         </div>
         <form data-ui-type="Form" data-ui-id="filter" class="list-filter">
             <input data-ui-id="keyword"
@@ -16,6 +19,6 @@
                 data-ui-extension-submit-type="AutoSubmit">搜索</div> -->
         </form>
     </div>
-    <!-- import: listTableWithCommand -->
+    <!-- import: listTable -->
     <!-- import: listPager -->
 </div>
