--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Baidu EMail Client</title>
+    <title>My Mail</title>
+    <link rel="shortcut icon" href="src/common/img/favicon2.png" type="image/png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <script type="text/javascript" src="src/third_party/ueditor-1.4.3/dist/utf8-php/third-party/zeroclipboard/ZeroClipboard.js"></script>
     <script type="text/javascript" src="src/third_party/ueditor-1.4.3/dist/utf8-php/ueditor.config.js"></script>
