调整 /mail/view 的UI效果，可以展示所属的label
现在存在的问题是 main.go 调用了 base.RunFilter，执行
的日志看起来也是正常的，但是就是没有效果，为啥呢？

--- a/src/client/src/mail/view.tpl.html
+++ b/src/client/src/mail/view.tpl.html
@@ -3,6 +3,11 @@
     <div class="mail-subject">
         <h2>${email.subject}</h2>
         <a href="#/mail/inbox">Inbox</a>
+        <!-- if: ${email.labels} -->
+            <!-- for: ${email.labels} as ${item} -->
+            <a href="#/mail/inbox~label=${item.id}">${item.name}</a>
+            <!-- /for -->
+        <!-- /if -->
     </div>
     <div class="list-header">
         <div class="list-summary">
