处理邮件正文中链接点击的行为
1. mailto: -> /mail/compose
2. 普通链接: -> target = '_blank'

--- a/src/client/src/mail/view.tpl.html
+++ b/src/client/src/mail/view.tpl.html
@@ -67,7 +67,7 @@
             </table>
         </div>
     </div>
-    <div class="mail-body">
+    <div class="mail-body" id="mail-body">
       ${email.message|raw}
     </div>
 </div>
