升级 Operator，支持 Negative 的判断
[From, '!Contains', '@baidu.com']

--- a/src/client/src/mail/compose.tpl.html
+++ b/src/client/src/mail/compose.tpl.html
@@ -2,7 +2,7 @@
 <div class="mail-compose">
 <form data-ui-type="Form" data-ui-id="form" data-ui-auto-validate="true" method="POST">
     <div class="form-block">
-        <h3>新邮件</h3>
+        <!-- <h3>新邮件</h3> -->
         <div class="form-body">
             <div class="form-row" style="display: none">
                 <div class="form-key">发件人：</div>
@@ -52,11 +52,12 @@
             </div>
         </div>
     </div>
-    <div class="form-operation">
+    <!-- <div class="form-operation">
         <button data-ui-type="Button" data-ui-id="submit" data-ui-skin="spring" type="submit">提交</button>
         <button data-ui-type="Button" data-ui-id="cancel" data-ui-skin="link" type="button">取消</button>
-    </div>
+    </div> -->
 </form>
-
-
 </div>
+
+<!-- target: TPL_mail_compose_child -->
+<!-- import: TPL_mail_compose -->
