开始实现回复和转发的功能

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>My Mail</title>
+    <title>伊妹儿</title>
     <link rel="shortcut icon" href="src/common/img/favicon2.png" type="image/png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <script type="text/javascript" src="src/third_party/ueditor-1.4.3/dist/utf8-php/third-party/zeroclipboard/ZeroClipboard.js"></script>
@@ -21,8 +21,7 @@
     <a class="logo" href="#"><img alt="" title="" src="src/common/img/logo.png" width="177" height="34"></a>
     <ul id="nav" class="nav"></ul>
     <div class="user-info">
-        <a class="user-name"></a>
-        <a href="/user/logout">退出</a>
+        <a href="http://git.baidu.com/baidu/email/issues" target="_blank">Gitlab</a>
     </div>
 </div>
 
