引入jQuery，简化代码的写法

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="src/third_party/ueditor-1.4.3/dist/utf8-php/ueditor.all.js"></script>
     <link rel="stylesheet" href="src/common/css/main.less" />
     <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/1-8-2/esl.js"></script>
+    <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.js"></script>
 </head>
 
 <body>
