--- a/src/client/src/mail/compose.tpl.html
+++ b/src/client/src/mail/compose.tpl.html
@@ -12,7 +12,7 @@
                            data-ui-required="required"
                            data-ui-width="500"
                            name="from"
-                           data-ui-value="liyubei@baidu.com" />
+                           data-ui-value="=?utf-8?B?5p2O546J5YyX?= <liyubei@baidu.com>" />
                 </div>
             </div>
             <div class="form-row">
