基本实现了MailAddressInput的控件

--- a/src/client/src/dev/index.tpl.html
+++ b/src/client/src/dev/index.tpl.html
@@ -13,4 +13,8 @@
     </dd>
 </dl>
 
+
+<div data-ui-type="MailAddressInput" data-ui-id="mai"></div>
+<div data-ui-type="Button" data-ui-id="get">Get Value</div>
+
 </div>
