--- a/src/client/src/mail/compose.tpl.html
+++ b/src/client/src/mail/compose.tpl.html
@@ -18,22 +18,20 @@
             <div class="form-row">
                 <div class="form-key">收件人：</div>
                 <div class="form-value">
-                    <input data-ui-id="to"
-                           data-ui-type="TextBox"
-                           data-ui-required="required"
-                           data-ui-width="500"
-                           name="to"
-                           data-ui-value="${to}" />
+                    <div data-ui-id="to"
+                         data-ui-type="MailAddressInput"
+                         data-ui-required="required"
+                         data-ui-width="500"
+                         name="to"></div>
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-key">抄送：</div>
                 <div class="form-value">
-                    <input data-ui-id="cc"
-                           data-ui-type="TextBox"
-                           data-ui-width="500"
-                           name="cc"
-                           data-ui-value="${cc}" />
+                    <div data-ui-id="cc"
+                         data-ui-type="MailAddressInput"
+                         data-ui-width="500"
+                         name="cc"></div>
                 </div>
             </div>
             <div class="form-row subject-row">
