新增几个常用的功能
1. 标记为已读
2. 删除
3. 显式未读的数量

--- a/src/client/src/mail/inbox.tpl.html
+++ b/src/client/src/mail/inbox.tpl.html
@@ -8,7 +8,11 @@
             <!-- else -->
             <li>
             <!-- /if -->
-                <a href="#/mail/inbox~label=${item.id}">${item.name}</a>
+                <a href="#/mail/inbox~label=${item.id}">${item.name}
+                <!-- if: ${item.unread_count} > 0 -->
+                (${item.unread_count})
+                <!-- /if-->
+                </a>
             </li>
         <!-- /for -->
             <br/>
@@ -23,6 +27,7 @@
                 <div data-ui-type="Button" data-ui-id="refresh">刷新</div>
                 <!-- &nbsp;|&nbsp; -->
                 <div data-ui-type="Button" data-ui-id="archive" data-ui-disabled="true">归档</div>
+                <div data-ui-type="Button" data-ui-id="markAsRead" data-ui-disabled="true">标记已读</div>
                 <div data-ui-type="Button" data-ui-id="delete" data-ui-disabled="true">删除</div>
             </div>
             <form data-ui-type="Form" data-ui-id="filter" class="list-filter">
