--- a/src/client/src/mail/view.tpl.html
+++ b/src/client/src/mail/view.tpl.html
@@ -26,6 +26,8 @@
                     <!-- /if -->
                     &nbsp;|&nbsp;
                     <a data-ui-type="Link" data-ui-id="forward" href="javascript:void(0)">转发</a>
+                    &nbsp;|&nbsp;
+                    <a data-ui-type="Link" data-ui-id="delete" href="javascript:void(0)">删除</a>
                   </td>
                 </tr>
                 <!-- if: ${email.to} -->
