修复转发的时候没有带附件过去的BUG，后端还未实现

--- a/src/client/src/dev/index.tpl.html
+++ b/src/client/src/dev/index.tpl.html
@@ -16,5 +16,13 @@
 
 <div data-ui-type="MailAddressInput" data-ui-id="mai"></div>
 <div data-ui-type="Button" data-ui-id="get">Get Value</div>
+<hr />
+
+<div data-ui-id="attachments"
+     data-ui-id="box-group-horizontal"
+     data-ui-box-type="checkbox"
+     data-ui-type="BoxGroup"
+     name="attachments"></div>
+
 
 </div>
