--- a/src/client/src/mail/compose.tpl.html
+++ b/src/client/src/mail/compose.tpl.html
@@ -34,6 +34,18 @@
                          name="cc"></div>
                 </div>
             </div>
+            <!-- if: ${attachments.length} -->
+            <div class="form-row">
+                <div class="form-key">附件：</div>
+                <div class="form-value">
+                    <div data-ui-id="attachments"
+                         data-ui-id="box-group-horizontal"
+                         data-ui-box-type="checkbox"
+                         data-ui-type="BoxGroup"
+                         name="attachments"></div>
+                </div>
+            </div>
+            <!-- /if -->
             <div class="form-row subject-row">
                 <div class="form-key">标题：</div>
                 <div class="form-value">
