--- a/src/client/src/mail/view.tpl.html
+++ b/src/client/src/mail/view.tpl.html
@@ -28,6 +28,8 @@
                     <a data-ui-type="Link" data-ui-id="forward" href="javascript:void(0)">转发</a>
                     &nbsp;|&nbsp;
                     <a data-ui-type="Link" data-ui-id="delete" href="javascript:void(0)">删除</a>
+                    &nbsp;|&nbsp;
+                    <a data-ui-type="Link" data-ui-id="addLabel" href="javascript:void(0)">添加标签</a>
                   </td>
                 </tr>
                 <!-- if: ${email.to} -->
@@ -75,7 +77,7 @@
                   <th>附件：</th>
                   <td>
                       <!-- for: ${email.attachments} as ${item}, ${index} -->
-                      <a href="http://127.0.0.1:8765/downloads/${uidl}/${item}" target="_blank">${item}</a>&nbsp;&nbsp;
+                      <a href="http://127.0.0.1:8765/downloads/${uidl}/${item|url}" target="_blank">${item}</a>&nbsp;&nbsp;
                       <!-- /for -->
                   </td>
                 </tr>
