可以支持从config.yml读取发件人的信息了，之前是固定死的了

--- a/src/client/src/mail/view.tpl.html
+++ b/src/client/src/mail/view.tpl.html
@@ -29,7 +29,7 @@
                     &nbsp;|&nbsp;
                     <a data-ui-type="Link" data-ui-id="delete" href="javascript:void(0)">删除</a>
                     &nbsp;|&nbsp;
-                    <a data-ui-type="Link" data-ui-id="addLabel" href="javascript:void(0)">添加标签</a>
+                    <a data-ui-disabled="true" data-ui-type="Link" data-ui-id="addLabel" href="javascript:void(0)">添加标签</a>
                   </td>
                 </tr>
                 <!-- if: ${email.to} -->
