回复带有Content-Id的邮件成功了

--- a/src/client/src/mail/view.tpl.html
+++ b/src/client/src/mail/view.tpl.html
@@ -77,7 +77,7 @@
                   <th>附件：</th>
                   <td>
                       <!-- for: ${email.attachments} as ${item}, ${index} -->
-                      <a href="http://127.0.0.1:8765/downloads/${uidl}/${item|url}" target="_blank">${item}</a>&nbsp;&nbsp;
+                      <a href="http://127.0.0.1:8765/downloads/${uidl}/att/${item|url}" target="_blank">${item}</a>&nbsp;&nbsp;
                       <!-- /for -->
                   </td>
                 </tr>
