实现了一个很丑陋的ContactsList的原型

--- a/src/client/src/mail/inbox.tpl.html
+++ b/src/client/src/mail/inbox.tpl.html
@@ -16,8 +16,12 @@
             </li>
         <!-- /for -->
             <br/>
-            <li><a href="#/mail/inbox">Sent Mail</a></li>
+            <!-- <li><a href="#/mail/inbox">Sent Mail</a></li> -->
+            <!-- if: !${label} -->
+            <li class="active"><a href="#/mail/inbox">All Mail</a></li>
+            <!-- else -->
             <li><a href="#/mail/inbox">All Mail</a></li>
+            <!-- /if-->
         </ul>
     </div>
     <div class="est-main">
