--- a/src/client/src/mail/inbox.tpl.html
+++ b/src/client/src/mail/inbox.tpl.html
@@ -30,10 +30,26 @@
                 <div data-ui-type="Button" data-ui-id="create" data-ui-skin="spring-add">新建</div>
                 <div data-ui-type="Button" data-ui-id="refresh">刷新</div>
                 <!-- &nbsp;|&nbsp; -->
-                <div data-ui-type="Button" data-ui-id="archive" data-ui-disabled="true">归档</div>
-                <div data-ui-type="Button" data-ui-id="markAsRead" data-ui-disabled="true">标记已读</div>
-                <div data-ui-type="Button" data-ui-id="addLabel" data-ui-disabled="true">添加标签</div>
-                <div data-ui-type="Button" data-ui-id="delete" data-ui-disabled="true">删除</div>
+                <div data-ui-type="Button"
+                     data-ui-extension-data-type="CustomData"
+                     data-ui-data-type="archive"
+                     data-ui-id="archive"
+                     data-ui-group="batch">归档</div>
+                <div data-ui-type="Button"
+                     data-ui-id="markAsRead"
+                     data-ui-extension-data-type="CustomData"
+                     data-ui-data-type="markAsRead"
+                     data-ui-group="batch">标记已读</div>
+                <div data-ui-type="Button"
+                     data-ui-id="addLabel"
+                     data-ui-extension-data-type="CustomData"
+                     data-ui-data-type="addLabel"
+                     data-ui-group="batch">添加标签</div>
+                <div data-ui-type="Button"
+                     data-ui-id="delete"
+                     data-ui-extension-data-type="CustomData"
+                     data-ui-data-type="delete"
+                     data-ui-group="batch">删除</div>
             </div>
             <form data-ui-type="Form" data-ui-id="filter" class="list-filter">
                 <input data-ui-id="keyword"
