--- a/src/client/src/mail/view.tpl.html
+++ b/src/client/src/mail/view.tpl.html
@@ -77,7 +77,7 @@
                   <th>附件：</th>
                   <td>
                       <!-- for: ${email.attachments} as ${item}, ${index} -->
-                      <a download="${item.name|url}" href="http://127.0.0.1:8765/downloads/${uidl}/att/${item.name|url}" target="_blank">${item.name} (${item.size})</a>&nbsp;&nbsp;
+                      <a href="${item.preview_url}" target="_blank">${item.name} (${item.size})</a>&nbsp;&nbsp;
                       <!-- /for -->
                   </td>
                 </tr>
