几个小的功能修复和升级
1. 日期展示的问题（处理IE下的兼容性）
2. 可以查看未过滤的邮件内容
3. 回复和转发邮件的时候，可以带上In-Reply-To和References字段

References的计算规则可能有问题，需要注意

--- a/src/client/src/mail/compose.tpl.html
+++ b/src/client/src/mail/compose.tpl.html
@@ -4,6 +4,17 @@
     <div class="form-block">
         <h3>新邮件</h3>
         <div class="form-body">
+            <!-- if: ${uidl} -->
+            <div class="form-row">
+                <div class="form-key">Uidl：</div>
+                <div class="form-value">
+                    <div data-ui-id="uidl"
+                         data-ui-type="TextBox"
+                         data-ui-value="${uidl}"
+                         name="uidl"></div>
+                </div>
+            </div>
+            <!-- /if -->
             <div class="form-row">
                 <div class="form-key">收件人：</div>
                 <div class="form-value">
