--- a/src/client/src/mail/view.tpl.html
+++ b/src/client/src/mail/view.tpl.html
@@ -73,7 +73,9 @@
                 <tr>
                   <th>源文件：</th>
                   <td>
-                    <a href="http://127.0.0.1:8765/raw/${uidl}.txt" target="_blank">查看</a>
+                    <a href="http://${hostname}:8765/raw/${uidl}.txt" target="_blank">查看</a>
+                    &nbsp;|&nbsp;
+                    <a href="http://${hostname}:8765/ori/message/${uidl}.html" target="_blank">未过滤内容的邮件</a>
                   </td>
                 </tr>
                 <!-- if: ${email.attachments.length} -->
