几个小的功能升级和BUG修复
1. 展示日历邀请时候的格式改进，忽略掉一些暂时没意义的字段
2. RFC2047.Decode的升级，可以支持编码和非编码内容混杂在一起的情况

--- a/src/client/src/mail/view.tpl.html
+++ b/src/client/src/mail/view.tpl.html
@@ -94,29 +94,30 @@
     <div class="mail-body" id="mail-body">
       <!-- if: ${email.is_calendar} -->
           <!-- if: ${email.message.METHOD} == "REQUEST" -->
+          <!-- var: vevent = ${email.message.VEVENT} -->
           <table class="mail-calendar">
               <tr>
                   <th>时间：</th>
-                  <td>${email.message.VEVENT.DTSTART} - ${email.message.VEVENT.DTEND}</td>
+                  <td>${vevent.DTSTART} - ${vevent.DTEND}</td>
               </tr>
               <tr>
                   <th>地点：</th>
-                  <td>${email.message.VEVENT.LOCATION|raw}</td>
+                  <td>${vevent.LOCATION|raw}</td>
               </tr>
               <tr>
                   <th>组织者：</th>
-                  <td>${email.message.VEVENT.ORGANIZER|raw}</td>
+                  <td><a href="mailto:${vevent.ORGANIZER.email}">${vevent.ORGANIZER.name}</a></td>
               </tr>
               <tr>
                   <th>参与人员：</th>
                   <td>
-                      <!-- for: ${email.message.VEVENT.ATTENDEE} as ${attendee} -->
-                      ${attendee|raw}<br />
+                      <!-- for: ${vevent.ATTENDEE} as ${attendee} -->
+                      <a href="mailto:${attendee.email}" title="${attendee.email}">${attendee.name}</a>&nbsp;
                       <!-- /for -->
                   </td>
               </tr>
               <tr>
-                  <td colspan="2"><pre>${email.message.VEVENT.DESCRIPTION|raw}</pre></td>
+                  <td colspan="2"><pre>${vevent.DESCRIPTION|raw}</pre></td>
               </tr>
           </table>
           <!-- else -->
