修复 mail.go 解析邮件体时候的问题
如果邮件中有多种类型的内容，比如 text/plain, text/html, text/calendar
优先使用 text/html，如果没有的话，考虑使用 text/plain，如果还是没有的
话，就看看那种类型的长度最长，就用哪种

--- a/src/client/src/mail/compose.tpl.html
+++ b/src/client/src/mail/compose.tpl.html
@@ -5,7 +5,7 @@
         <h3>新邮件</h3>
         <div class="form-body">
             <!-- if: ${uidl} -->
-            <div class="form-row">
+            <div class="form-row" style="display: none">
                 <div class="form-key">Uidl：</div>
                 <div class="form-value">
                     <div data-ui-id="uidl"
